--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +15,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.show{
+  display: block;
+}
+.hide{
+  display: none;
+}
+
+.ant-layout-sider {
+  background-color: white !important;
+  color: black !important;
+  box-shadow: inset;
+}
+.ant-menu{
+  background-color: white !important;
+  color: black !important;
+}
+
+.ant-menu-item{
+  background-color: white !important;
+  color: black !important;
+  align-items: center !important;
+}
+.ant-menu-item:hover{
+  background-color: #97BF11 !important;
+  color: white !important;
+}
+.ant-menu-item-active{
+  background-color: #97BF11 !important;
+  color: white !important;
+}
+
+
+@media (max-width: 768px){
+  .ant-layout-sider{
+     width: min-content !important;
+  }
+}
+  
+
+
