Add Reservation form

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,13 @@ code {
      width: min-content !important;
   }
 }
+
+@media (max-width: 480px){
+  .ant-layout-sider{
+      width: 0px !important;
+      
+  }
+}
   
 
 
