--- a/src/index.css
+++ b/src/index.css
@@ -4,55 +4,68 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family:
+    source-code-pro,
+    Menlo,
+    Monaco,
+    Consolas,
+    'Courier New',
     monospace;
 }
 
-.show{
+.show {
   display: block;
 }
-.hide{
+
+.hide {
   display: none;
 }
 
 .ant-layout-sider {
   background-color: white !important;
   color: black !important;
-  box-shadow: inset;
 }
-.ant-menu{
+
+.ant-menu {
   background-color: white !important;
   color: black !important;
 }
 
-.ant-menu-item{
+.ant-menu-item {
   background-color: white !important;
   color: black !important;
   align-items: center !important;
 }
-.ant-menu-item:hover{
-  background-color: #97BF11 !important;
-  color: white !important;
-}
-.ant-menu-item-active{
-  background-color: #97BF11 !important;
+
+.ant-menu-item:hover {
+  background-color: #97bf11 !important;
   color: white !important;
 }
 
+.ant-menu-item-active {
+  background-color: #97bf11 !important;
+  color: white !important;
+}
 
-@media (max-width: 768px){
-  .ant-layout-sider{
-     width: min-content !important;
+@media (max-width: 768px) {
+  .ant-layout-sider {
+    width: min-content !important;
   }
 }
-  
-
-
