Add tutors pages and displayed tutors

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,16 @@ code {
   color: white !important;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 @media (max-width: 768px) {
   .ant-layout-sider {
     width: min-content !important;
